// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextLaunchInfo should match component snapshot 1`] = `
<article
  className="next-launch-info-card"
  onMouseLeave={[Function]}
>
  <h2>
    Long March 11 | Jilin-1
  </h2>
  <div
    className="mission"
  >
    <h3>
      Mission Description:
    </h3>
    <p>
      Type: 
      <span>
        Earth Science
      </span>
    </p>
    <p>
      <span>
        The first sea launch of Long March 11 rocket. It carries two Jilin-1 Earth observation satellites.
      </span>
    </p>
    <a
      href="https://spacelaunchnow.me/launch/long-march-11-jilin-1-1927"
    >
      Space Launch Now Info
    </a>
  </div>
  <div
    className="rocket-provider"
  >
    <h3>
      Rocket: 
      <span>
        Long March 11
      </span>
    </h3>
    <p>
      Thrust: 
      <span>
        1177
        kN
      </span>
    </p>
    <p>
      Height:  
      <span>
        20
        M
      </span>
       Width: 
      <span>
        2
        M
      </span>
    </p>
    <a
      href="https://en.wikipedia.org/wiki/Long_March_11"
    >
      Rocket Wiki
    </a>
    <h3>
      Launch Provider: 
      <span>
        China National Space Administration
      </span>
    </h3>
    <p>
      <span>
        The China National Space Administration (CNSA) is the national space agency of the People's Republic of China. It is responsible for the national space program and for planning and development of space activities. CNSA and China Aerospace Corporation (CASC) assumed the authority over space development efforts previously held by the Ministry of Aerospace Industry. The CNSA has many launch sites around China with their orbital sites located in Jiuquan, Xichang, Taiyuan and Wenchang.
      </span>
    </p>
    <a
      href="http://www.cnsa.gov.cn/"
    >
      Provider Website
    </a>
  </div>
  <button
    onClick={[Function]}
  >
    x
  </button>
</article>
`;

exports[`NextLaunchInfo should match component snapshot with launches without mission 1`] = `
<article
  className="next-launch-info-card"
  onMouseLeave={[Function]}
>
  <h2>
    Long March 11 | Jilin-1
  </h2>
  <div
    className="mission"
  >
    <h3>
      Mission Description:
    </h3>
    <p>
      Type: 
      <span>
        Unknown
      </span>
    </p>
    <p>
      <span>
        Unknown
      </span>
    </p>
    <a
      href="https://spacelaunchnow.me/launch/long-march-11-jilin-1-1927"
    >
      Space Launch Now Info
    </a>
  </div>
  <div
    className="rocket-provider"
  >
    <h3>
      Rocket: 
      <span>
        Long March 11
      </span>
    </h3>
    <p>
      Thrust: 
      <span>
        1177
        kN
      </span>
    </p>
    <p>
      Height:  
      <span>
        20
        M
      </span>
       Width: 
      <span>
        2
        M
      </span>
    </p>
    <a
      href="https://en.wikipedia.org/wiki/Long_March_11"
    >
      Rocket Wiki
    </a>
    <h3>
      Launch Provider: 
      <span>
        China National Space Administration
      </span>
    </h3>
    <p>
      <span>
        The China National Space Administration (CNSA) is the national space agency of the People's Republic of China. It is responsible for the national space program and for planning and development of space activities. CNSA and China Aerospace Corporation (CASC) assumed the authority over space development efforts previously held by the Ministry of Aerospace Industry. The CNSA has many launch sites around China with their orbital sites located in Jiuquan, Xichang, Taiyuan and Wenchang.
      </span>
    </p>
    <a
      href="http://www.cnsa.gov.cn/"
    >
      Provider Website
    </a>
  </div>
  <button
    onClick={[Function]}
  >
    x
  </button>
</article>
`;
